--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>zadarlabs_arm_ros1</name>
   <version>0.0.1</version>
   <description>Zadar Labs ROS package</description>
-  <maintainer email="your.email@example.com">Your Name</maintainer>
+  <maintainer email="greinema@ethz.ch">Max Greiner</maintainer>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
